--- a/sass/desktop.scss
+++ b/sass/desktop.scss
@@ -1,6 +1,6 @@
-$primary-color: #2980B9;
-$secondary-color:#f44336;
-$font-primary: roboto, arial;
+ @import 'variables';
+
+
 @media screen and (min-width: 1410px) {
 body{
 	font-family: $font-primary;
@@ -34,31 +34,19 @@ nav{
 }
 #subFront{
 	font-size: 250%;
-	text-shadow: 2px 2px 2px black;
+	text-shadow: $textShadow;
 }
 
 
   #topDiv{
 	background: url("../images/background1.jpg");
 	background-size: cover;
-	background-repeat: no-repeat;
-	display: -webkit-box;
-  	display: -webkit-flex;
-  	display: -moz-box;
-  	display: -ms-flexbox;
-  	display: flex;
-	-webkit-box-orient: vertical;
-  	-webkit-box-direction: normal;
-  	-webkit-flex-direction: column;
-  	-moz-box-orient: vertical;
-  	-moz-box-direction: normal;
-  	-ms-flex-direction: column;
-  	flex-direction: column;
+	@include flexbox;
 	.icon{
 		margin-top: 10%;
 		i{
 			font-size: 600%;
-			text-shadow: 2px 2px 2px black;
+			text-shadow: $textShadow;
 			color: white;
 			opacity: .75
 		}
@@ -77,18 +65,18 @@ nav{
 	}
 	i, p{
 		color: white;
-		text-shadow: 1px 1px 1px black;
+		text-shadow: $smallShadow;
 		font-size: 250%;
 	}
 	i{
-		text-shadow: 2px 2px 2px black;
+		text-shadow: $textShadow;
 	}
 }
 
 
 .title{
 	color: white;
-	text-shadow: 1px 1px 1px black;
+	text-shadow: $smallShadow;
 	p{
 		font-size: 110%;
 	}
@@ -133,35 +121,13 @@ nav{
 }
 .bottomStuff{
 	background-color: $primary-color;
-	display: -webkit-box;
-  	display: -webkit-flex;
-  	display: -moz-box;
-  	display: -ms-flexbox;
-  	display: flex;
-	-webkit-box-orient: vertical;
-  	-webkit-box-direction: normal;
-  	-webkit-flex-direction: column;
-  	-moz-box-orient: vertical;
-  	-moz-box-direction: normal;
-  	-ms-flex-direction: column;
-  	flex-direction: column;
+	@include flexbox;
 
 }
 
 .botContent{
 	overflow: hidden;
-	display: -webkit-box;
-  	display: -webkit-flex;
-  	display: -moz-box;
-  	display: -ms-flexbox;
-  	display: flex;
-	-webkit-box-orient: vertical;
-  	-webkit-box-direction: normal;
-  	-webkit-flex-direction: column;
-  	-moz-box-orient: vertical;
-  	-moz-box-direction: normal;
-  	-ms-flex-direction: column;
-  	flex-direction: column;
+	@include flexbox;
 	position: relative;
 	.cardClass{
 		margin-top: 10%;
