--- a/sass/media.scss
+++ b/sass/media.scss
@@ -1,6 +1,4 @@
-$primary-color: #2980B9;
-$secondary-color:#f44336;
-$font-primary: roboto, arial;
+ @import 'variables';
 @media screen and (max-width: 1400px) {
 
 
@@ -36,7 +34,7 @@ nav{
 }
 #subFront{
 	font-size: 150%;
-	text-shadow: 2px 2px 2px black;
+	text-shadow: $textShadow;
 }
 
 
@@ -44,18 +42,7 @@ nav{
 	background: url("../images/background1.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
-	display: -webkit-box;
-  	display: -webkit-flex;
-  	display: -moz-box;
-  	display: -ms-flexbox;
-  	display: flex;
-	-webkit-box-orient: vertical;
-  	-webkit-box-direction: normal;
-  	-webkit-flex-direction: column;
-  	-moz-box-orient: vertical;
-  	-moz-box-direction: normal;
-  	-ms-flex-direction: column;
-  	flex-direction: column;
+	@include flexbox;
 	.icon{
 		margin-top: 10%;
 		i{
@@ -77,7 +64,7 @@ nav{
 	}
 	i, p{
 		color: white;
-		text-shadow: 1px 1px 1px black;
+		text-shadow: $smallShadow;
 	}
 	p{
 		font-size: 200%;
@@ -87,7 +74,7 @@ nav{
 
 .title{
 	color: white;
-	text-shadow: 1px 1px 1px black;
+	text-shadow: $smallShadow;
 	p{
 		font-size: 110%;
 	}
@@ -127,35 +114,13 @@ nav{
 }
 .bottomStuff{
 	background-color: $primary-color;
-	display: -webkit-box;
-  	display: -webkit-flex;
-  	display: -moz-box;
-  	display: -ms-flexbox;
-  	display: flex;
-	-webkit-box-orient: vertical;
-  	-webkit-box-direction: normal;
-  	-webkit-flex-direction: column;
-  	-moz-box-orient: vertical;
-  	-moz-box-direction: normal;
-  	-ms-flex-direction: column;
-  	flex-direction: column;
+	@include flexbox;
 
 }
 
 .botContent{
 	overflow: hidden;
-	display: -webkit-box;
-  	display: -webkit-flex;
-  	display: -moz-box;
-  	display: -ms-flexbox;
-  	display: flex;
-	-webkit-box-orient: vertical;
-  	-webkit-box-direction: normal;
-  	-webkit-flex-direction: column;
-  	-moz-box-orient: vertical;
-  	-moz-box-direction: normal;
-  	-ms-flex-direction: column;
-  	flex-direction: column;
+	@include flexbox;
 	position: relative;
 	.cardClass{
 		margin-top: 10%;
