changed spacing of .features for tablets

--- a/css/css.css
+++ b/css/css.css
@@ -77,7 +77,7 @@
   .footTop {
     height: 20%;
     vertical-align: middle;
-    margin-bottom: 5%; }
+    padding-top: 5%; }
 
   .footBot {
     color: white;
