--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,20 +1,20 @@
 $primary-color: #2980B9;
 $secondary-color:#f44336;
-$font-primary: roboto, arial;
+$font-primary: roboto,
+arial;
 $textShadow: 2px 2px 2px black;
 $smallShadow: 1px 1px 1px black;
-
-@mixin flexbox{
-	display: -webkit-box;
-  	display: -webkit-flex;
-  	display: -moz-box;
-  	display: -ms-flexbox;
-  	display: flex;
-	-webkit-box-orient: vertical;
-  	-webkit-box-direction: normal;
-  	-webkit-flex-direction: column;
-  	-moz-box-orient: vertical;
-  	-moz-box-direction: normal;
-  	-ms-flex-direction: column;
-  	flex-direction: column;
+@mixin flexbox {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -moz-box-orient: vertical;
+    -moz-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
 }
