--- a/sass/desktop.scss
+++ b/sass/desktop.scss
@@ -1,159 +1,153 @@
  @import 'variables';
-
-
-@media screen and (min-width: 1410px) {
-body{
-	font-family: $font-primary;
-	width: 100vw;
-}
-.loTop {
-	font-size: 350%;
-	margin-left: 2%;
-}
-nav{
-	background-color: $primary-color;
-	a:link, a:active, a:visited{
-		background-color: $primary-color;
-	}
-}
-#logIn{
-	width: 100%;
-}
-.loRight{
-	background-color: lighten($primary-color, 10%);
-	width: 20%;
-	a{
-		font-size: 250%;
-	}
-}
-
-#titleFront{
-	font-size: 450%;
-	color: darken($primary-color, 20%);
-	margin-top: 15%;
-}
-#subFront{
-	font-size: 250%;
-	text-shadow: $textShadow;
-}
-
-
-  #topDiv{
-	background: url("../images/background1.jpg");
-	background-size: cover;
-	@include flexbox;
-	.icon{
-		margin-top: 10%;
-		i{
-			font-size: 600%;
-			text-shadow: $textShadow;
-			color: white;
-			opacity: .75
-		}
-		i:hover{
-			opacity: 1;
-		}
-	}
-}
-#textTry{
-	text-align: center;
-}
-.features{
-	margin-top: 30%;
-	#bottom{
-		margin-top: 100%;
-	}
-	i, p{
-		color: white;
-		text-shadow: $smallShadow;
-		font-size: 250%;
-	}
-	i{
-		text-shadow: $textShadow;
-	}
-}
-
-
-.title{
-	color: white;
-	text-shadow: $smallShadow;
-	p{
-		font-size: 110%;
-	}
-	p, a{
-		margin-top: 15%;
-	}
-}
-.foot, .footStuff, .footBot{
-	background-color: $primary-color;
-	color: white;
-	font-size: 200%;
-}
-
-.footTop {
-	height: 30%;
-	p{
-		vertical-align: middle;
-		font-size: 150%;
-		margin-left: 8%;
-		margin-right: 8%;
-		padding-top: 6%;
-	}
-}
-.signUp{
-	font-size: 300%;
-	color: white;
-	background-color: #206695;
-	border-radius: 2em;
-}
-.footBot{
-	margin-top: 10%;
-	font-size: 300%;
-	margin-left: 10%;
-	margin-right: 10%;
-}
-.botBut{
-	margin-bottom: 15%;
-	margin-top: 5%;
-}
-.signUp:active, .signUp:link, .signUp:hover, .signUp:visited{
-	background-color: $primary-color;
-}
-.bottomStuff{
-	background-color: $primary-color;
-	@include flexbox;
-
-}
-
-.botContent{
-	overflow: hidden;
-	@include flexbox;
-	position: relative;
-	.cardClass{
-		margin-top: 10%;
-		p{
-			font-size: 250%;
-		}
-	}
-	color: $primary-color; 
-	h4{
-		color: $primary-color;
-	}
-	.titleCard{
-		color: $primary-color;
-		font-size: 400%;
-	}
-	.iconCard{
-		background-color: lighten($primary-color, 50%);
-		padding: 5%;
-		border-radius: 2em;
-		color: $primary-color;
-		font-size: 400%;
-	}
-	img{
-		opacity: .3;
-		position: absolute;
-		height: 100%;
-	}
-}
-}
+ @media screen and (min-width: 1410px) {
+     body {
+         font-family: $font-primary;
+         width: 100vw;
+     }
+     .logoTop {
+         font-size: 350%;
+         margin-left: 2%;
+     }
+     nav {
+         background-color: $primary-color;
+         a:link,
+         a:active,
+         a:visited {
+             background-color: $primary-color;
+         }
+     }
+     #logIn {
+         width: 100%;
+     }
+     .loRight {
+         background-color: lighten($primary-color, 10%);
+         width: 20%;
+         a {
+             font-size: 250%;
+         }
+     }
+     #titleFront {
+         font-size: 450%;
+         color: darken($primary-color, 20%);
+         margin-top: 15%;
+     }
+     #subFront {
+         font-size: 250%;
+         text-shadow: $textShadow;
+     }
+     #topDiv {
+         background: url("../images/background1.jpg");
+         background-size: cover;
+         @include flexbox;
+         .icon {
+             margin-top: 10%;
+             i {
+                 font-size: 600%;
+                 text-shadow: $textShadow;
+                 color: white;
+                 opacity: .75
+             }
+             i:hover {
+                 opacity: 1;
+             }
+         }
+     }
+     #textTry {
+         text-align: center;
+     }
+     .features {
+         margin-top: 30%;
+         #bottom {
+             margin-top: 100%;
+         }
+         i,
+         p {
+             color: white;
+             text-shadow: $smallShadow;
+             font-size: 250%;
+         }
+         i {
+             text-shadow: $textShadow;
+         }
+     }
+     .title {
+         color: white;
+         text-shadow: $smallShadow;
+         p {
+             font-size: 110%;
+         }
+         p,
+         a {
+             margin-top: 15%;
+         }
+     }
+     .footerTop {
+         height: 30%;
+         p {
+             vertical-align: middle;
+             font-size: 150%;
+             margin-left: 8%;
+             margin-right: 8%;
+             padding-top: 6%;
+         }
+     }
+     .signUp {
+         font-size: 300%;
+         color: white;
+         background-color: #206695;
+         border-radius: 2em;
+     }
+     .footerBot {
+         margin-top: 10%;
+         font-size: 300%;
+         margin-left: 10%;
+         margin-right: 10%;
+         background-color: $primary-color;
+         color: white;
+     }
+     .bottomButton {
+         margin-bottom: 15%;
+         margin-top: 5%;
+     }
+     .signUp:active,
+     .signUp:link,
+     .signUp:hover,
+     .signUp:visited {
+         background-color: $primary-color;
+     }
+     .finalSection {
+         background-color: $primary-color;
+         @include flexbox;
+     }
+     .botContent {
+         overflow: hidden;
+         @include flexbox;
+         position: relative;
+         .cardClass {
+             margin-top: 10%;
+             p {
+                 font-size: 250%;
+             }
+         }
+         color: $primary-color;
+         h4 {
+             color: $primary-color;
+         }
+         .titleCard {
+             color: $primary-color;
+             font-size: 400%;
+         }
+         .iconCard {
+             background-color: lighten($primary-color, 50%);
+             padding: 5%;
+             border-radius: 2em;
+             color: $primary-color;
+             font-size: 400%;
+         }
+         img {
+             opacity: .3;
+             position: absolute;
+             height: 100%;
+         }
+     }
+ }
